<resources>
    <string name="app_name">ForDesign</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--main activity-->
    <string name="dribbble">Dribbble</string>

    <!--shots fragment-->
    <string name="msg_empty_data">No data</string>
    <string name="action_retry">Retry</string>
    <string name="list_any">Shots</string>
    <string name="list_debuts">Debuts</string>
    <string name="list_teams">Team Shots</string>
    <string name="list_playoffs">Playoffs</string>
    <string name="list_rebounds">Rebounds</string>
    <string name="list_animated">Animated GIFs</string>
    <string name="list_attachments">Shots with Attachments</string>
    <string name="sort_popularity">Popular</string>
    <string name="sort_recent">Recent</string>
    <string name="sort_comments">Most Commented</string>
    <string name="sort_views">Most Viewed</string>
    <string name="time_frame_recent">Now</string>
    <string name="time_frame_week">This Past Week</string>
    <string name="time_frame_month">This Past Month</string>
    <string name="time_frame_year">This Past Year</string>
    <string name="time_frame_ever">All Time</string>

    <!--nav drawer layout-->
    <string name="nav_home">Home</string>
    <string name="nav_my_shots">My Shots</string>
    <string name="nav_my_projects">My Projects</string>
    <string name="nav_my_buckets">My Buckets</string>
    <string name="nav_my_likes">My Likes</string>
    <string name="nav_my_following">My Following</string>
    <string name="nav_my_followers">My Followers</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_sign_in">Sign in</string>

    <!--shot detail activity-->
    <string name="indicator_unlike">Like?</string>
    <string name="indicator_bucket">Bucket</string>
    <string name="indicator_comment">Comment</string>
    <string name="indicator_likes">likes</string>
    <string name="indicator_buckets">buckets</string>
    <string name="indicator_views">views</string>
    <string name="action_open_in_browser">Open in browser</string>
    <string name="action_share_link">Share link</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_download_image">Download image</string>

    <!--user detail activity-->
    <string name="action_follow">FOLLOW</string>
    <string name="action_following">FOLLOWING</string>
    <string name="tab_details">DETAILS</string>
    <string name="tab_shots">SHOTS</string>
    <string name="tab_following">FOLLOWING</string>

    <!--user detail fragment-->
    <string name="indicator_shots">shots</string>
    <string name="indicator_projects">projects</string>
    <string name="indicator_following">following</string>
    <string name="indicator_followers">followers</string>
    <string name="indicator_teams">teams</string>
    <string name="indicator_members">members</string>

    <!--my bucket activity-->
    <string name="title_my_buckets">My Buckets</string>
    <string name="indicator_shot">shot</string>
    <string name="btn_create_bucket">Create</string>
    <string name="btn_update_bucket">Update</string>
    <string name="btn_delete_bucket">Delete</string>
    <string name="btn_cancel">Cancel</string>
    <string name="msg_empty_bucket_name">Please enter the bucket name.</string>
    <string name="dialog_title_create_bucket">Create a new bucket</string>
    <string name="dialog_title_edit_bucket">Edit bucket</string>
    <string name="dialog_title_delete_bucket">Delete bucket</string>
    <string name="msg_create_bucket_success">Create bucket successful.</string>
    <string name="msg_create_bucket_fail">Create bucket failed.</string>
    <string name="msg_update_bucket_success">Update bucket successful.</string>
    <string name="msg_update_bucket_fail">Update bucket failed.</string>
    <string name="msg_delete_bucket">Are you sure to delete this bucket?</string>
    <string name="msg_delete_bucket_success">Delete bucket successful.</string>
    <string name="msg_delete_bucket_fail">Delete bucket failed.</string>
    <string name="hint_bucket_name">Name</string>
    <string name="hint_bucket_description">Description (optional)</string>

    <!--add shot to bucket-->
    <string name="title_shot_to_bucket">Add shot to bucket</string>

    <!--settings activity-->
    <string name="title_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_sign_up">Sign up</string>

    <!--about activity-->
    <string name="title_about">About</string>
    <string name="action_check_update">Check for updating</string>
    <string name="action_version_illustration">Version illustration</string>
    <string name="action_feedback">Feedback</string>
    <string name="action_go_star">Go star</string>
    <string name="action_copyright_information">Source Licenses</string>
    <string name="version">Version</string>
    <string name="version_not_found">not found</string>
    <string name="msg_is_the_latest_version">Is the latest version</string>


    <string name="shots">Shots</string>
    <string name="buckets">Buckets</string>
    <string name="projects">Projects</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="likes">Likes</string>

    <string name="title_my_shots">My Shots</string>
    <string name="title_my_likes">My Likes</string>
    <string name="title_bucket_shots">Bucket Shots</string>
    <string name="title_my_projects">My Projects</string>
    <string name="title_project_shots">Project Shots</string>
    <string name="title_my_followers">My Followers</string>
    <string name="title_my_following">My Following</string>
    <string name="title_shot_likes">Shot Likers</string>
    <string name="title_shot_comments">Shot Comments</string>
    <string name="title_user_likes">User Likes</string>
    <string name="title_buckets">Buckets</string>
    <string name="title_projects">Projects</string>
    <string name="title_teams">Teams</string>
    <string name="title_members">Members</string>
    <string name="title_users">Users</string>
    <string name="title_followers">Followers</string>
    <string name="title_copyright_information">Source Licenses</string>

    <string name="action_add">ADD</string>
    <string name="action_open">OPEN</string>

    // transition name
    <string name="image_shot">Image Shot</string>
    <string name="image_user_avatar">User Avatar</string>

    <string name="default_image_description">Image</string>

    <string name="default_shot_description">No description.</string>
    <string name="default_comment_body">No content.</string>
    <string name="default_bucket_description"><p>No description.</p></string>
    <string name="default_user_bio"><p>No bio.</p></string>

    <string name="error_load_shots">Error when load shots.</string>
    <string name="error_load_buckets">Error when load buckets.</string>
    <string name="error_load_projects">Error when load projects.</string>
    <string name="error_load_user_likes">Error when load user likes.</string>
    <string name="error_load_users">Error when load users.</string>
    <string name="error_get_shot">Error when get shot.</string>
    <string name="error_load_shot_comments">Error when load shot comments.</string>
    <string name="error_load_user_followings">Error when load user followings.</string>

    <string name="loading">Loading</string>
    <string name="loading_error">Error when loading, click to try again.</string>

    <string name="hint_add_comment">Add comment</string>
    <string name="msg_empty_comment">Please enter your comment.</string>
    <string name="msg_add_comment_fail">Add comment failed.</string>

    <string name="msg_shot_image_loading">Loading image, please wait a minute.</string>
    <string name="msg_shot_image_load_success">Download image successful.</string>
    <string name="msg_shot_image_load_fail">Download image failed.</string>
    <string name="msg_shot_image_copy_link_success">Copy image link successful.</string>
    <string name="msg_shot_image_share_fail">Share image failed.</string>
    <string name="msg_shot_image_share_fail_empty">Shot image does not downloaded.</string>

    <string name="msg_add_shot_to_bucket_fail">Add shot to bucket failed.</string>
    <string name="msg_remove_shot_from_bucket_fail">Remove shot from bucket failed.</string>

    <string name="title_send_to">Send To</string>
    <string name="title_select_browse_tool">Select</string>

</resources>
