<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <data class=".databinding.SettingsActBinding">

        <variable
            name="actionHandler"
            type="com.thea.fordesign.setting.SettingsContract.Presenter"/>
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/AppTheme.AppBarOverlay"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                app:title="@string/title_settings"/>
        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:id="@+id/fl_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <TextView
                style="@style/SettingsActionItem"
                android:layout_marginTop="@dimen/normal_vertical_margin"
                android:onClick="@{() -> actionHandler.openAbout()}"
                android:text="@string/action_about"/>

            <TextView
                style="@style/SettingsActionItem"
                android:layout_marginTop="@dimen/normal_vertical_margin"
                android:gravity="center"
                android:onClick="@{() -> actionHandler.signUp()}"
                android:text="@string/action_sign_up"
                android:textSize="17sp"/>
        </LinearLayout>
    </android.support.design.widget.CoordinatorLayout>
</layout>